<resources>
    <string name="app_name">SimpleCalculatorApp</string>
    <string name="plus_sign">+</string>
    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="minus_sign">-</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="star_sign">*</string>
    <string name="equals_sign">=</string>
    <string name="slash_sign">/</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_0">0</string>
    <string name="dot">.</string>
    <string name="error">Error</string>
    <string name="clear"><![CDATA[X>]]></string>
</resources>
